// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneEnrollmentTransformer Tests should create phone enrollment UI elements when multiple method types exist in transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "",
      "type": "submit",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "elements": [
          {
            "elements": [
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.phone.enroll.sms.subtitle",
                },
                "type": "Description",
                "viewIndex": 0,
              },
              {
                "options": {
                  "customOptions": [
                    {
                      "callback": [Function],
                      "label": "oie.phone.enroll.sms.label",
                      "value": "sms",
                    },
                    {
                      "callback": [Function],
                      "label": "oie.phone.enroll.voice.label",
                      "value": "voice",
                    },
                  ],
                  "defaultValue": [Function],
                  "name": "authenticator.methodType",
                },
                "type": "StepperRadio",
                "viewIndex": 0,
              },
              {
                "label": "mfa.phoneNumber.placeholder",
                "options": {
                  "inputMeta": {
                    "name": "authenticator.phoneNumber",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oie.phone.sms.primaryButton",
                "options": {
                  "step": "",
                  "type": "submit",
                },
                "type": "Button",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.phone.enroll.call.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "customOptions": [
                    {
                      "callback": [Function],
                      "label": "oie.phone.enroll.sms.label",
                      "value": "sms",
                    },
                    {
                      "callback": [Function],
                      "label": "oie.phone.enroll.voice.label",
                      "value": "voice",
                    },
                  ],
                  "defaultValue": [Function],
                  "name": "authenticator.methodType",
                },
                "type": "StepperRadio",
                "viewIndex": 1,
              },
              {
                "label": "mfa.phoneNumber.placeholder",
                "options": {
                  "inputMeta": {
                    "name": "authenticator.phoneNumber",
                  },
                },
                "type": "Field",
                "viewIndex": 1,
              },
              {
                "label": "oie.phone.call.primaryButton",
                "options": {
                  "step": "",
                  "type": "submit",
                },
                "type": "Button",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneEnrollmentTransformer Tests should create phone enrollment UI elements when only sms method types exist in transaction 1`] = `
{
  "data": {
    "authenticator.methodType": "sms",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "",
      "type": "submit",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.enroll.sms.subtitle",
        },
        "type": "Description",
      },
      {
        "label": "mfa.phoneNumber.placeholder",
        "options": {
          "inputMeta": {
            "name": "authenticator.phoneNumber",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.phone.sms.primaryButton",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneEnrollmentTransformer Tests should create phone enrollment UI elements when only voice method types exist in transaction 1`] = `
{
  "data": {
    "authenticator.methodType": "voice",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "",
      "type": "submit",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.enroll.call.subtitle",
        },
        "type": "Description",
      },
      {
        "label": "mfa.phoneNumber.placeholder",
        "options": {
          "inputMeta": {
            "name": "authenticator.phoneNumber",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.phone.call.primaryButton",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
